chore: added npmrc

--- a/packages/migrate-core/package.json
+++ b/packages/migrate-core/package.json
@@ -4,6 +4,8 @@
   "files": [
     "./dist"
   ],
+  "main": "./dist/index",
+  "types": "./dist/index",
   "scripts": {
     "build": "tsc && swc ./src -d dist"
   },
