--- a/packages/migrate-core/package.json
+++ b/packages/migrate-core/package.json
@@ -19,5 +19,8 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.41",
     "@types/node": "^18.15.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
