--- a/packages/migrate-cli/package.json
+++ b/packages/migrate-cli/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@qte/elephas-migrate-cli",
   "version": "0.0.3",
+  "main": "dist/index",
+  "types": "dist/index",
   "files": [
     "./dist",
     "./templates"
