--- a/packages/nest-testing/.swcrc
+++ b/packages/nest-testing/.swcrc
@@ -1,6 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/swcrc",
   "sourceMaps": true,
+  "exclude": ["**/*.spec.ts"],
   "module": {
     "type": "commonjs",
     "strict": true
