--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,4 +2,4 @@ packages:
   - "packages/migrate-cli"
   - "packages/migrate-core"
   - "packages/nest"
-  - "pacakges/nest-testing"
+  - "packages/nest-testing"
